Resolves: tdf#89227 if no SwView then disable accept/reject change buttons

e.g. if the context is an embedded draw ole then we don't have a SwView

Change-Id: I6ba07f0ecf1c419e45f7e0ac628a82e6bd486668